Fix positioning of resolved check icon in RTL
Everything in the title bar is positioned according to
the content language, but the check icon was positioned
according to the interface language. I think this should
all be using the interface language, but for consistency
let's at least make this use the same as everything else
in its vicinity for now, so it doesn't look horribly broken.

--- a/modules/styles/board/topic/titlebar.less
+++ b/modules/styles/board/topic/titlebar.less
@@ -32,12 +32,22 @@ div#content .flow-topic-title {
 div#content .mw-content-ltr .flow-topic-title {
 	/* @noflip */
 	margin: 0 2.5em .15em 0;
+
+	.mw-ui-icon.mw-ui-icon-before:before {
+		/* @noflip */
+		float: left;
+	}
 }
 
 // Correct positioning for ltr/rtl content direction
 div#content .mw-content-rtl .flow-topic-title {
 	/* @noflip */
 	margin: 0 0 .15em 2.5em;
+
+	.mw-ui-icon.mw-ui-icon-before:before {
+		/* @noflip */
+		float: right;
+	}
 }
 
 .flow-moderated-topic-title {
